# chiaki

./: .gitignore  CMakeLists.txt
cmake/: switch.cmake
lib/include/chiaki/: gkcrypt.h
lib/src/: gkcrypt.c
switch/: CMakeLists.txt  README.md
switch/include/: discoverymanager.h  exception.h  host.h  settings.h
switch/src/: discoverymanager.cpp  host.cpp  main.cpp  settings.cpp
